Fix a number of warnings and deprecations